docs: documentation for list openings
